--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,9 @@
 
 // Variables
 @import 'variables';
-
+@import "common/global";
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+/** Import theme styles */
+@import "layouts/header";
