--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,28 @@
 
 /** Bootstrap navbar fix (https://git.io/fADqW) */
 
+/* Sticky footer styles cal
+-------------------------------------------------- */
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 3rem;
+  /* Margin bottom by footer height */
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3rem;
+  /* Set the fixed height of the footer here */
+  line-height: 60px;
+}
+
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -83,7 +105,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -523,7 +545,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #f8fafc;
+  background-color: rgba(255, 255, 255, 0.05);
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -5139,15 +5161,15 @@ input[type=button].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(169, 131, 7, 0.25);
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.05), 0 0 0 0.2rem rgba(169, 131, 7, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(169, 131, 7, 0.25);
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.05), 0 0 0 0.2rem rgba(169, 131, 7, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(169, 131, 7, 0.25);
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.05), 0 0 0 0.2rem rgba(169, 131, 7, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -5353,8 +5375,8 @@ input[type=button].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #f8fafc;
-  border-color: #dee2e6 #dee2e6 #f8fafc;
+  background-color: rgba(255, 255, 255, 0.05);
+  border-color: #dee2e6 #dee2e6 rgba(255, 255, 255, 0.05);
 }
 
 .nav-tabs .dropdown-menu {
@@ -12922,9 +12944,9 @@ a.text-gray-1-light:focus {
 /** Import theme styles */
 
 header {
-  background-color: #020409;
   padding: 0;
-  transition: all 0.5s ease-out;
+  position: relative;
+  z-index: 4;
 }
 
 header nav.navbar {
@@ -12953,7 +12975,7 @@ header nav.navbar ul.navbar-nav {
 
 header nav.navbar ul.navbar-nav li.nav-item a.nav-link {
   text-transform: uppercase;
-  color: #fff;
+  color: #2b2d32;
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 500;
@@ -13028,5 +13050,15 @@ header nav.navbar ul.navbar-nav li.nav-item.dropdown div.dropdown-menu.show a.dr
 header nav.navbar ul.navbar-nav li.nav-item.dropdown div.dropdown-menu.show a.dropdown-item:hover {
   background-color: #a98307;
   color: white;
+}
+
+footer {
+  color: rgba(43, 45, 50, 0.5);
+  text-align: center;
+  border-top: 1px solid rgba(169, 131, 7, 0.5);
+}
+
+footer p {
+  margin: 0;
 }
 
