--- a/resources/sass/layouts/_header.scss
+++ b/resources/sass/layouts/_header.scss
@@ -1,10 +1,7 @@
 header {
-    background-color: map-get($theme-colors, dark);
     padding: 0;
-    -webkit-transition: all 0.5s ease-out;
-    -moz-transition: all 0.5s ease-out;
-    -o-transition: all 0.5s ease-out;
-    transition: all 0.5s ease-out;
+    position: relative;
+    z-index: 4;
 
     nav.navbar {
         background: transparent !important;
@@ -29,7 +26,7 @@ header {
             li.nav-item {
                 a.nav-link {
                     text-transform: uppercase;
-                    color: map-get($theme-colors, $key: white);
+                    color: map-get($theme-colors, $key: gray-1);
                     font-size: 1rem;
                     line-height: 1.5rem;
                     font-weight: 500;
