--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,4 +1,7 @@
 // Body
+@import url("https://fonts.googleapis.com/css?family=Oswald:400,500,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap");
+
 $body-bg:rgba(255, 255, 255, 0.05);
 
 // Typography
@@ -7,17 +10,21 @@ sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
-$theme-colors: (
-    primary: #a98307,
+$theme-colors: (primary: #a98307,
     primary-light: rgba(169, 131, 7, 0.5),
     white: #fff,
     white-light: rgba(255, 255, 255, 0.5),
     dark-light:rgba(2, 4, 9, 0.9),
-    gray-1: #2b2d32,
     dark: #020409,
+    gray-1: #2b2d32,
+    dark-lighter:rgba(2, 4, 9, 0.6),
     gray-1-light: rgba(43, 45, 50, 0.5),
-);
+    gray-2: #7e8083,
+    gray-2-lightest:rgba(126, 128, 131, 0.1));
 
+/** Fonts **/
+$font-header: "Oswald", sans-serif;
+$font-family-base: "Montserrat", sans-serif;
 
 /* new breackpoint*/
 $grid-columns: 12;
