--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,13 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
 
 // Variables
 @import 'variables';
 @import "common/global";
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+
+
+/** Import Components styles */
+@import "components/card";
 
 /** Import theme styles */
 @import "layouts/header";
