--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,10 @@
 
 /** Import Components styles */
 @import "components/card";
+@import "components/header-content";
+@import "components/panel";
+@import "components/btn";
+@import "components/btn-group";
 
 /** Import theme styles */
 @import "layouts/header";
