--- a/resources/sass/components/_btn-group.scss
+++ b/resources/sass/components/_btn-group.scss
@@ -4,11 +4,12 @@
             border: 1px solid map-get($theme-colors, primary);
             color: map-get($theme-colors, dark);
             font-size: 0.8rem;
+            border-radius: 0;
 
             &.delete {
                 &:hover {
                     background-color: map-get($theme-colors, gray-1-light);
-                    color: map-get($theme-colors, white-light);
+                    color: map-get($theme-colors, white);
                     text-decoration: none;
                 }
             }
@@ -16,7 +17,7 @@
             &.edit {
                 &:hover {
                     background-color: map-get($theme-colors, primary-light);
-                    color: map-get($theme-colors, white-light);
+                    color: map-get($theme-colors, white);
                     text-decoration: none;
                 }
             }
